# ansible-decent-desktop

./: .ansible-lint  .gitignore  .gitmodules  .yamllint  README.md  Vagrantfile  ansible.cfg  lint.sh  main.yml  pyproject.toml  requirements.txt  requirements.yml  run.sh
.github/workflows/: ansible-lint.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/files/: org.freedesktop.Flatpak.rules
roles/: ansible_plugins  debops-contrib.apparmor  debops-contrib.firejail  debops.ansible_plugins  debops.apparmor  debops.apt  debops.apt_install  debops.apt_preferences  debops.core  debops.docker_server  debops.grub  debops.journald  debops.keyring  debops.kmod  debops.libuser  debops.locales  debops.logrotate  debops.ntp  debops.python  debops.sysctl  debops.unattanded_upgrades  debops.users  dev-sec.os-hardening  global_handlers  secret
roles/additional_hardering/tasks/: main.yml
roles/additional_locales/roles/: mail.yml
roles/apparmor_profiles/defaults/: main.yml
roles/apparmor_profiles/handlers/: main.yml
roles/apparmor_profiles/tasks/: main.yml
roles/apt_transport_tor/tasks/: main.yml
roles/audio/files/: daemon.conf  default.pa
roles/audio/tasks/: main.yml
roles/boot_manager/files/: loader.conf  systemd-boot-kernel-hook.sh
roles/boot_manager/tasks/: main.yml
roles/boot_manager/templates/: update-systemd-boot.sh.j2
roles/de/defaults/: main.yml
roles/de/files/: Xmodmap  electron-flags.conf  ripgreprc  xbindkeysrc
roles/de/handlers/: main.yml
roles/de/tasks/: application-launcher.yml  applications.yml  autonice.yml  autostart.yml  (+16 more)
(+265 files in other folders)
