[tool.poetry]
name = "ansible-decent-desktop"
version = "0.1.0"
description = ""
authors = ["Anton Nesterov <anton@nesterov.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^10.5.0"
debops = "^3.1.0"
jmespath = "^1.0.1"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
molecule = "^24.9.0"
yamllint = "^1.35.1"
molecule-plugins = {extras = ["vagrant"], version = "^23.5.3"}
ansible-lint = { version = "^24.9.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
